test/resources/valid/com/boothj5/jarchexample/application/telephonenumber/service/TelephoneNumberService.java
package com.boothj5.jarchexample.application.telephonenumber.service;

import java.util.List;

import com.boothj5.jarchexample.application.common.*;
import com.boothj5.jarchexample.application.telephonenumber.repository.TelephoneNumberRepository;
