test/resources/invalid/com/boothj5/jarchexample/application/telephonenumber/controller/TelephoneNumberController.java
package com.boothj5.jarchexample.application.telephonenumber.controller;

import java.util.List;

import com.boothj5.jarchexample.application.common.*;
import com.boothj5.jarchexample.application.telephonenumber.facade.TelephoneNumberFacade;
import com.boothj5.jarchexample.application.telephonenumber.service.TelephoneNumberService;
